# src/controller/poetry.controller.ts
@@ -1,7 +1,7 @@
 // filename: poetry.controller.ts
 import {Request, Response} from "express";
-import {PoemViewModel} from "../ViewModel/PoemViewModel";
-import {PoemService} from "../service/poem.service";
+import {PoemViewModel} from "../viewmodel/PoemViewModel";
+import {PoetryService} from "../service/poetry.service";
 import {Container} from "typedi";
 
 
@@ -9,7 +9,7 @@ export class PoetryController {
 
     static all = async (req: Request, res: Response) => {
         try {
-            const poemService = Container.get(PoemService)
+            const poemService = Container.get(PoetryService)
             const poems = await poemService.findAll()
             const poemArray = poems.map( poem => {
                 // @ts-ignore
@@ -28,7 +28,7 @@ export class PoetryController {
 
     static clear = async (req: Request, res: Response) => {
         try {
-            const poemService = Container.get(PoemService)
+            const poemService = Container.get(PoetryService)
             await poemService.removeAll()
             res.status(200).end()
         }
@@ -38,25 +38,29 @@ export class PoetryController {
         }
     }
 
-    static generate = async (req: Request, res: Response) => {
-        const {authorId, poemType} = req.body
+    static generateHaiku = async (req: Request, res: Response) => {
         try {
-            const poemService = Container.get(PoemService)
-            if (poemType === 'haiku') {
-                const generatedHaiku = await poemService.generateHaiku(authorId)
-                const {title, author, firstLine, secondLine, thirdLine} = generatedHaiku
-                const content = [firstLine, secondLine, thirdLine]
-                res.status(201).send(new PoemViewModel(author.name, content, title));
-            }
-            else if (poemType === 'limerick') {
-                const generatedLimerick = await poemService.generateLimerick(authorId)
-                const {title, author, firstLine, secondLine, thirdLine, fourthLine, fifthLine} = generatedLimerick
-                const content = [firstLine, secondLine, thirdLine, fourthLine, fifthLine]
-                res.status(201).send(new PoemViewModel(author.name, content, title));
-            }
-            else {
-                res.status(400).end()
-            }
+            const {authorId} = req.body
+            const poetryService = Container.get(PoetryService)
+            const generatedHaiku = await poetryService.generateHaiku(authorId)
+            const {title, author, firstLine, secondLine, thirdLine} = generatedHaiku
+            const content = [firstLine, secondLine, thirdLine]
+            res.status(201).send(new PoemViewModel(author.name, content, title));
+        }
+        catch (error) {
+            console.log(error)
+            res.status(500).end()
+        }
+    }
+
+    static generateLimerick = async (req: Request, res: Response) => {
+        const {authorId} = req.body
+        try {
+            const poetryService = Container.get(PoetryService)
+            const generatedLimerick = await poetryService.generateLimerick(authorId)
+            const {title, author, firstLine, secondLine, thirdLine, fourthLine, fifthLine} = generatedLimerick
+            const content = [firstLine, secondLine, thirdLine, fourthLine, fifthLine]
+            res.status(201).send(new PoemViewModel(author.name, content, title));
         }
         catch (error) {
             console.log(error)
